--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.lutzed.servoluntario.login.LoginActivity">
+    tools:context="com.lutzed.servoluntario.signup.SignUpActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
