--- a/app/src/main/res/layout/item_selectable_opportunity.xml
+++ b/app/src/main/res/layout/item_selectable_opportunity.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="120dp"
-    android:background="@color/placeHolderColor"
+    android:background="@color/placeHolder"
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
