--- a/app/src/main/res/layout/fragment_opportunity.xml
+++ b/app/src/main/res/layout/fragment_opportunity.xml
@@ -41,7 +41,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_title"
-                    android:inputType="textCapWords"
                     android:maxLines="1"/>
 
             </android.support.design.widget.TextInputLayout>
@@ -184,6 +183,35 @@
                     android:maxLines="1"/>
 
             </android.support.design.widget.TextInputLayout>
+
+            <LinearLayout
+                android:id="@+id/imagesWrapper"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/causes"/>
+
+                <TextView
+                    android:id="@+id/imagesError"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/skills"
+                    android:textColor="@color/red"
+                    android:textSize="12sp"
+                    android:visibility="gone"/>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/imagesRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:orientation="horizontal"/>
+
+            </LinearLayout>
+
 
             <RadioGroup
                 android:id="@+id/locationTypeGroup"
