--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -12,6 +12,10 @@
         android:name="com.lutzed.servoluntario.main.FeedFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:clipToPadding="false"
+        android:padding="8dp"
         app:layoutManager="LinearLayoutManager"
         tools:context="com.lutzed.servoluntario.main.FeedFragment"
         tools:listitem="@layout/item_selection"/>
