--- a/app/src/main/res/layout/item_opportunity.xml
+++ b/app/src/main/res/layout/item_opportunity.xml
@@ -70,6 +70,7 @@
             android:id="@+id/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:ellipsize="end"
@@ -80,7 +81,6 @@
             android:id="@+id/imagesRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="220dp"
-            android:layout_marginTop="16dp"
             android:orientation="horizontal"/>
 
         <LinearLayout
