--- a/app/src/main/res/layout/item_organization.xml
+++ b/app/src/main/res/layout/item_organization.xml
@@ -77,6 +77,7 @@
             android:id="@+id/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:ellipsize="end"
@@ -86,7 +87,6 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/imagesRecyclerView"
             android:layout_width="match_parent"
-            android:layout_marginTop="16dp"
             android:layout_height="220dp"
             android:orientation="horizontal"/>
 
