--- a/app/src/main/res/layout/custom_data_view.xml
+++ b/app/src/main/res/layout/custom_data_view.xml
@@ -18,7 +18,7 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/secondaryText"
+            android:textColor="@color/tertiaryText"
             android:textSize="18sp"/>
 
         <TextView
