--- a/app/src/main/res/layout/fragment_edit_opportunity.xml
+++ b/app/src/main/res/layout/fragment_edit_opportunity.xml
@@ -91,7 +91,7 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/causesRecyclerView"
                     android:layout_width="match_parent"
-                    android:layout_height="120dp"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal"/>
 
             </LinearLayout>
@@ -119,7 +119,7 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/skillsRecyclerView"
                     android:layout_width="match_parent"
-                    android:layout_height="120dp"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal"/>
 
             </LinearLayout>
