--- a/app/src/main/res/layout/item_opportunity_items.xml
+++ b/app/src/main/res/layout/item_opportunity_items.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
@@ -17,15 +16,8 @@
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginTop="10dp"/>
-
-    <ImageView
-        android:id="@+id/checkMark"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:visibility="invisible"
-        app:srcCompat="@drawable/ic_check_circle_black_24dp"/>
+        android:layout_marginTop="10dp"
+        android:gravity="center"/>
 
 </LinearLayout>
 
