--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="tertiaryText">#9e9e9e</color>
     <color name="icons">#FFFFFF</color>
     <color name="iconsDark">#757575</color>
-    <color name="divider">#BDBDBD</color>
+    <color name="divider">#2ab6b6b6</color>
     <color name="placeHolder">#85ff40f2</color>
 
     <color name="red">#ff0000</color>
